--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "postcss-import": "^16.1.0"
     },
     "dependencies": {
+        "@vueuse/core": "^13.0.0",
         "primeicons": "^7.0.0",
         "primevue": "^4.1.1",
         "tailwindcss": "^3.4.1",
