--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "postcss-import": "^16.1.0"
     },
     "dependencies": {
+        "@pinia/nuxt": "^0.10.1",
         "@vueuse/core": "^13.0.0",
         "primeicons": "^7.0.0",
         "primevue": "^4.1.1",
