--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "@pinia/nuxt": "^0.10.1",
         "@vueuse/core": "^13.0.0",
+        "face-api.js": "^0.22.2",
         "primeicons": "^7.0.0",
         "primevue": "^4.1.1",
         "tailwindcss": "^3.4.1",
