--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
     },
     "dependencies": {
         "@pinia/nuxt": "^0.10.1",
+        "@primevue/forms": "^4.3.3",
         "@vueuse/core": "^13.0.0",
         "face-api.js": "^0.22.2",
+        "flatpickr": "^4.6.13",
         "primeicons": "^7.0.0",
-        "primevue": "^4.1.1",
+        "primevue": "^4.3.3",
         "tailwindcss": "^3.4.1",
         "tailwindcss-primeui": "^0.3.4",
         "vue": "^3.4.27",
-        "vue-router": "^4.2.5"
+        "vue-flatpickr-component": "^12.0.0",
+        "vue-router": "^4.2.5",
+        "vue-tailwind-datepicker": "^1.7.3"
     }
 }
